--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,26 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <!-- Primary Meta Tags -->
     <title>AI STOCKS</title>
+    <meta name="title" content="AI STOCKS" />
+    <meta name="description" content="Average Earnings of a Registered User From a Deposit of $250 to 521$" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="AI STOCKS" />
+    <meta property="og:description" content="Average Earnings of a Registered User From a Deposit of $250 to 521$" />
+    <meta property="og:image" content="https://thumbs2.imgbox.com/96/89/ELGjmuwt_t.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="AI STOCKS" />
+    <meta property="twitter:description" content="Average Earnings of a Registered User From a Deposit of $250 to 521$" />
+    <meta property="twitter:image" content="https://thumbs2.imgbox.com/96/89/ELGjmuwt_t.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 
 <body>
